Fix z-index bug in badge-creator and badge-viewer

--- a/timApp/static/scripts/tim/gamification/badge/badge-creator.component.scss
+++ b/timApp/static/scripts/tim/gamification/badge/badge-creator.component.scss
@@ -33,7 +33,7 @@
 
 .badge-card tim-badge:hover {
   transform: scale(1);
-  z-index: 20;
+  z-index: 2;
 }
 
 .badge_view::after {
