--- a/timApp/static/scripts/tim/gamification/badge/badge-viewer.component.scss
+++ b/timApp/static/scripts/tim/gamification/badge/badge-viewer.component.scss
@@ -33,7 +33,7 @@
 
 .badge-card tim-badge:hover {
   transform: scale(1);
-  z-index: 10;
+  z-index: 2;
 }
 
 .user_badges::after {
